Version 271: * Overscroll is now explicitly turned off at the root of UI3, working around an issue with vertical swipes on iOS when running as a Progressive Web App (PWA).

--- a/ui3/ui3.css
+++ b/ui3/ui3.css
@@ -146,6 +146,11 @@ svg.stroke
 	width: 40px;
 }
 /* Main */
+html
+{
+	overscroll-behavior: none; /* Prevents overscroll of the entire page on iOS when swiping down in PWA */
+}
+
 a[role="button"]
 {
 	cursor: pointer;
